changed icons, added 5 step in registration

--- a/registration.html
+++ b/registration.html
@@ -151,7 +151,7 @@
 														<div class="kt-wizard-v1__nav-item" data-ktwizard-type="step">
 															<div class="kt-wizard-v1__nav-body">
 																<div class="kt-wizard-v1__nav-icon">
-																	<i class="flaticon-responsive"></i>
+																	<i class="flaticon-coins"></i>
 																</div>
 																<div class="kt-wizard-v1__nav-label">
 																	3. Бюджет проекта
@@ -161,7 +161,7 @@
 														<div class="kt-wizard-v1__nav-item" data-ktwizard-type="step">
 															<div class="kt-wizard-v1__nav-body">
 																<div class="kt-wizard-v1__nav-icon">
-																	<i class="flaticon-truck"></i>
+																	<i class="flaticon-edit-1"></i>
 																</div>
 																<div class="kt-wizard-v1__nav-label">
 																	4. Дополнительные комментарии
@@ -171,7 +171,7 @@
 														<div class="kt-wizard-v1__nav-item" data-ktwizard-type="step">
 															<div class="kt-wizard-v1__nav-body">
 																<div class="kt-wizard-v1__nav-icon">
-																	<i class="flaticon-globe"></i>
+																	<i class="flaticon-attachment"></i>
 																</div>
 																<div class="kt-wizard-v1__nav-label">
 																	5. Планировки
@@ -398,9 +398,14 @@
 
 													<!--begin: Form Wizard Step 5-->
 													<div class="kt-wizard-v1__content" data-ktwizard-type="step-content">
-														<div class="kt-heading kt-heading--md">Review your Details and Submit</div>
+														<div class="kt-heading kt-heading--md">Прикрепите планировку и проверьте данные</div>
 														<div class="kt-form__section kt-form__section--first">
 															<div class="kt-wizard-v1__review">
+																
+																<div class="kt-wizard-v1__review-item">
+																<input name="myFile" type="file">
+																</div>
+
 																<div class="kt-wizard-v1__review-item">
 																	<div class="kt-wizard-v1__review-title">
 																		Current Address
