--- a/error-1.html
+++ b/error-1.html
@@ -23,7 +23,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!--begin::Fonts -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
 
 		<!--end::Fonts -->
 
@@ -111,11 +111,11 @@ License: You must have a valid license purchased only from themeforest(the above
 
 		<!-- begin:: Page -->
 		<div class="kt-grid kt-grid--ver kt-grid--root kt-page">
-			<div class="kt-grid__item kt-grid__item--fluid kt-grid  kt-error-v1" style="background-image: url(assets/media//error/bg1.jpg);">
+			<div class="kt-grid__item kt-grid__item--fluid kt-grid  kt-error-v1" style="background-image: url(assets/media/error/bg1.jpg);">
 				<div class="kt-error-v1__container">
 					<h1 class="kt-error-v1__number">404</h1>
 					<p class="kt-error-v1__desc">
-						OOPS! Something went wrong here
+						Страница не найдена! </br> Вернитесь на главную страницу.
 					</p>
 				</div>
 			</div>
