--- a/error-1.html
+++ b/error-1.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../../../">
 		<meta charset="utf-8" />
-		<title>Metronic | Error Page - 1</title>
+		<title>Страница не найдена | Дизайн24</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -115,7 +115,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				<div class="kt-error-v1__container">
 					<h1 class="kt-error-v1__number">404</h1>
 					<p class="kt-error-v1__desc">
-						Страница не найдена! </br> Вернитесь на главную страницу.
+						Страница не найдена! </br> Вернитесь на <a href="/"><b>главную страницу</b></a>.
 					</p>
 				</div>
 			</div>
