--- a/profile_designer.html
+++ b/profile_designer.html
@@ -135,7 +135,7 @@
 													<li class="kt-nav__item">
 														<a class="kt-nav__link active" href="#">
 															<span class="kt-nav__link-icon"><i class="flaticon2-user"></i></span>
-															<span class="kt-nav__link-text">Лобачевского, 23 (Офис)</span>
+															<span class="kt-nav__link-text">Лобачевского, 23 <span class="kt-badge kt-badge--danger kt-badge--inline kt-badge--pill kt-badge--rounded">Не начат</span></span> 
 														</a>
 													</li>
 													<li class="kt-nav__separator"></li>
@@ -224,7 +224,7 @@
 															Платежи
 														</div>
 														<div class="kt-notification__item-time">
-															Архив платежей и пополнение <span class="kt-badge kt-badge--danger kt-badge--inline kt-badge--pill kt-badge--rounded">2 pending</span>
+															Архив платежей и пополнение
 														</div>
 													</div>
 												</a>
