--- a/header.html
+++ b/header.html
@@ -15,6 +15,9 @@
 
 		<!--end::Fonts -->
 
+		<!--begin::Page Custom Styles(used by this page) -->
+		<link href="assets/css/pages/wizard/wizard-4.css" rel="stylesheet" type="text/css" />
+
 		<!--begin::Global Theme Styles(used by all pages) -->
 
 		<!--begin:: Vendor Plugins -->
