--- a/edit-user.html
+++ b/edit-user.html
@@ -404,7 +404,7 @@
 																	<div class="form-group row kt-margin-t-10 kt-margin-b-10">
 																		<label class="col-xl-3 col-lg-3 col-form-label"></label>
 																		<div class="col-lg-9 col-xl-6">
-																			<button type="button" class="btn btn-label-danger btn-bold btn-sm kt-margin-t-5 kt-margin-b-5">Deactivate your account ?</button>
+																			<button type="button" class="btn btn-label-danger btn-bold btn-sm kt-margin-t-5 kt-margin-b-5" data-target="#kt_modal_6">Деактивировать ваш аккаунт?</button>
 																		</div>
 																	</div>
 																</div>
@@ -429,25 +429,25 @@
 																	<div class="row">
 																		<label class="col-xl-3"></label>
 																		<div class="col-lg-9 col-xl-6">
-																			<h3 class="kt-section__title kt-section__title-sm">Change Or Recover Your Password:</h3>
+																			<h3 class="kt-section__title kt-section__title-sm">Смените или восстановите пароль:</h3>
 																		</div>
 																	</div>
 																	<div class="form-group row">
-																		<label class="col-xl-3 col-lg-3 col-form-label">Current Password</label>
+																		<label class="col-xl-3 col-lg-3 col-form-label">Текущий Пароль</label>
 																		<div class="col-lg-9 col-xl-6">
-																			<input type="password" class="form-control" value="" placeholder="Current password">
+																			<input type="password" class="form-control" value="" placeholder="Текущий пароль">
 																		</div>
 																	</div>
 																	<div class="form-group row">
-																		<label class="col-xl-3 col-lg-3 col-form-label">New Password</label>
+																		<label class="col-xl-3 col-lg-3 col-form-label">Новый пароль</label>
 																		<div class="col-lg-9 col-xl-6">
-																			<input type="password" class="form-control" value="" placeholder="New password">
+																			<input type="password" class="form-control" value="" placeholder="Новый пароль">
 																		</div>
 																	</div>
 																	<div class="form-group form-group-last row">
-																		<label class="col-xl-3 col-lg-3 col-form-label">Verify Password</label>
+																		<label class="col-xl-3 col-lg-3 col-form-label">Потвердите пароль</label>
 																		<div class="col-lg-9 col-xl-6">
-																			<input type="password" class="form-control" value="" placeholder="Verify password">
+																			<input type="password" class="form-control" value="" placeholder="Потвердите пароль">
 																		</div>
 																	</div>
 																</div>
@@ -466,6 +466,26 @@
 												</div>
 											</div>
 										</form>
+									</div>
+								</div>
+							</div>
+
+							<!-- Modal -->
+							<div class="modal fade" id="kt_modal_6" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+								<div class="modal-dialog modal-dialog-centered" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											</button>
+										</div>
+										<div class="modal-body">
+											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+											<button type="button" class="btn btn-primary">Save changes</button>
+										</div>
 									</div>
 								</div>
 							</div>
