--- a/payments.html
+++ b/payments.html
@@ -260,7 +260,7 @@
 											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Обзор Проекта</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 											</li>
 
-											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--here kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Дизайнеры</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Дизайнеры</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 											</li>
 
 											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Поддержка</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
