--- a/sticky_items.html
+++ b/sticky_items.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!--begin::Fonts -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700">
 
 		<!--end::Fonts -->
 
@@ -254,10 +254,10 @@
 											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Обзор Проекта</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 											</li>
 
-											<li class="kt-menu__item kt-menu__item--here kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Дизайнеры</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Дизайнеры</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 											</li>
 
-											<li class="kt-menu__item  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Поддержка</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
+											<li class="kt-menu__item kt-menu__item--here  kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Поддержка</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
 											</li>
 
 											<li class="kt-menu__item kt-menu__item--open kt-menu__item--submenu kt-menu__item--rel" data-ktmenu-submenu-toggle="click" aria-haspopup="true"><a href="javascript:;" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-text">Функциональное зонирование</span><i class="kt-menu__ver-arrow la la-angle-right"></i></a>
@@ -275,158 +275,163 @@
 
 					<!-- end:: Header -->
 
-					<div class="kt-body kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-grid--stretch" id="kt_body">
-						<div class="kt-content  kt-content--fit-top  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
 
-							<!-- begin:: Content -->
+				<div class="kt-body kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-grid--stretch" id="kt_body">
+											<div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
+								
 
-							<!-- begin:: Section -->
-							<div class="kt-container ">
-								<div class="row">
-									<div class="col-lg-4">
-										<div class="kt-portlet kt-iconbox kt-iconbox--animate-slow">
-											<div class="kt-portlet__body">
-												<a href="#" class="kt-iconbox__body">
-													<div class="kt-iconbox__icon">
-														<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																<rect x="0" y="0" width="24" height="24" />
-																<path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3" />
-																<path d="M8.56066017,16.6819805 L10.6819805,14.5606602 C11.267767,13.9748737 12.2175144,13.9748737 12.8033009,14.5606602 L14.9246212,16.6819805 C15.5104076,17.267767 15.5104076,18.2175144 14.9246212,18.8033009 L12.8033009,20.9246212 C12.2175144,21.5104076 11.267767,21.5104076 10.6819805,20.9246212 L8.56066017,18.8033009 C7.97487373,18.2175144 7.97487373,17.267767 8.56066017,16.6819805 Z M8.56066017,4.68198052 L10.6819805,2.56066017 C11.267767,1.97487373 12.2175144,1.97487373 12.8033009,2.56066017 L14.9246212,4.68198052 C15.5104076,5.26776695 15.5104076,6.21751442 14.9246212,6.80330086 L12.8033009,8.9246212 C12.2175144,9.51040764 11.267767,9.51040764 10.6819805,8.9246212 L8.56066017,6.80330086 C7.97487373,6.21751442 7.97487373,5.26776695 8.56066017,4.68198052 Z" fill="#000000" />
-															</g>
-														</svg> </div>
-													<div class="kt-iconbox__desc">
-														<h3 class="kt-iconbox__title">
-															Заявки от дизайнеров
-														</h3>
-														<div class="kt-iconbox__content">
-															Открытый тендер по вашему проекту
-														</div>
-													</div>
-												</a>
-											</div>
-										</div>
+<!-- begin:: Content -->
+	<div class="kt-container  kt-grid__item kt-grid__item--fluid">
+		<div class="row">
+    <div class="col">
+        <div class="alert alert-light alert-elevate fade show kt-margin-t-20" role="alert">
+            <div class="alert-icon"><i class="flaticon-warning kt-font-brand"></i></div>
+            <div class="alert-text">
+                Сравнивайте предложения от дизайнеров, общайтесь в чате и договоривайтесь об условиях.
+                <br>
+				Cмотрите профили дизайнеров на платформе, отправляйте предложения участия в проекте тем, кто вам подходит. </br>Если возникли вопросы, то обращайтесь в поддержку.
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row" data-sticky-container>
+    <div class="col-lg-3 col-xl-2">
+    	<div class="kt-portlet sticky" data-sticky="true" data-margin-top="100px" data-sticky-for="1023" data-sticky-class="kt-sticky">
+            <div class="kt-portlet__body kt-portlet__body--fit">
+                <ul class="kt-nav kt-nav--bold kt-nav--md-space kt-nav--v3 kt-margin-t-20 kt-margin-b-20 nav nav-tabs" role="tablist">
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link active" data-toggle="tab" href="#kt_profile_tab_personal_information" role="tab">
+                            <span class="kt-nav__link-icon"><i class="flaticon-avatar"></i></span>
+                            <span class="kt-nav__link-text">Personal Information</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" data-toggle="tab" href="#kt_profile_tab_account_information" role="tab">
+                            <span class="kt-nav__link-icon"><i class="flaticon-lock"></i></span>
+                            <span class="kt-nav__link-text">Acccount Information</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" data-toggle="tab" href="#kt_profile_change_password" role="tab">
+                            <span class="kt-nav__link-icon"><i class="flaticon-settings"></i></span>
+                            <span class="kt-nav__link-text">Change Password</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" data-toggle="tab" href="#kt_profile_email_settings" role="tab">
+                            <span class="kt-nav__link-icon"><i class="flaticon-multimedia-2"></i></span>
+                            <span class="kt-nav__link-text">Email Settings</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-coins"></i></span>
+                            <span class="kt-nav__link-text">Saved Credit Cards</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-customer"></i></span>
+                            <span class="kt-nav__link-text">Social Networks</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__separator"></li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-diagram"></i></span>
+                            <span class="kt-nav__link-text">Tax Information</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-bag"></i></span>
+                            <span class="kt-nav__link-text">Purchases</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-tabs"></i></span>
+                            <span class="kt-nav__link-text">Statements</span>
+                        </a>
+                    </li>
+                    <li class="kt-nav__item">
+                        <a class="kt-nav__link" href="#" role="tab" data-toggle="kt-tooltip" title="" data-placement="right" data-original-title="This feature is coming soon!">
+                            <span class="kt-nav__link-icon"><i class="flaticon-share"></i></span>
+                            <span class="kt-nav__link-text">Audit Log</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+   
+
+</div>
+	</div>
+<!-- end:: Content -->						</div>
 									</div>
-									<div class="col-lg-4">
-										<div class="kt-portlet kt-iconbox kt-iconbox--animate">
-											<div class="kt-portlet__body">
-												<a href="#" class="kt-iconbox__body">
-													<div class="kt-iconbox__icon">
-														<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																<rect x="0" y="0" width="24" height="24" />
-																<path d="M8,3 L8,3.5 C8,4.32842712 8.67157288,5 9.5,5 L14.5,5 C15.3284271,5 16,4.32842712 16,3.5 L16,3 L18,3 C19.1045695,3 20,3.8954305 20,5 L20,21 C20,22.1045695 19.1045695,23 18,23 L6,23 C4.8954305,23 4,22.1045695 4,21 L4,5 C4,3.8954305 4.8954305,3 6,3 L8,3 Z" fill="#000000" opacity="0.3" />
-																<path d="M10.875,15.75 C10.6354167,15.75 10.3958333,15.6541667 10.2041667,15.4625 L8.2875,13.5458333 C7.90416667,13.1625 7.90416667,12.5875 8.2875,12.2041667 C8.67083333,11.8208333 9.29375,11.8208333 9.62916667,12.2041667 L10.875,13.45 L14.0375,10.2875 C14.4208333,9.90416667 14.9958333,9.90416667 15.3791667,10.2875 C15.7625,10.6708333 15.7625,11.2458333 15.3791667,11.6291667 L11.5458333,15.4625 C11.3541667,15.6541667 11.1145833,15.75 10.875,15.75 Z" fill="#000000" />
-																<path d="M11,2 C11,1.44771525 11.4477153,1 12,1 C12.5522847,1 13,1.44771525 13,2 L14.5,2 C14.7761424,2 15,2.22385763 15,2.5 L15,3.5 C15,3.77614237 14.7761424,4 14.5,4 L9.5,4 C9.22385763,4 9,3.77614237 9,3.5 L9,2.5 C9,2.22385763 9.22385763,2 9.5,2 L11,2 Z" fill="#000000" />
-															</g>
-														</svg> </div>
-													<div class="kt-iconbox__desc">
-														<h3 class="kt-iconbox__title">
-															Дизайнеры на платформе
-														</h3>
-														<div class="kt-iconbox__content">
-															Смотрите профили и приглашайте на проект
-														</div>
-													</div>
-												</a>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-4">
-										<div class="kt-portlet kt-iconbox kt-iconbox--animate-fast">
-											<div class="kt-portlet__body">
-												<a href="#" class="kt-iconbox__body">
-													<div class="kt-iconbox__icon">
-														<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
-															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																<polygon points="0 0 24 0 24 24 0 24" />
-																<path d="M12,11 C9.790861,11 8,9.209139 8,7 C8,4.790861 9.790861,3 12,3 C14.209139,3 16,4.790861 16,7 C16,9.209139 14.209139,11 12,11 Z" fill="#000000" fill-rule="nonzero" opacity="0.3" />
-																<path d="M3.00065168,20.1992055 C3.38825852,15.4265159 7.26191235,13 11.9833413,13 C16.7712164,13 20.7048837,15.2931929 20.9979143,20.2 C21.0095879,20.3954741 20.9979143,21 20.2466999,21 C16.541124,21 11.0347247,21 3.72750223,21 C3.47671215,21 2.97953825,20.45918 3.00065168,20.1992055 Z" fill="#000000" fill-rule="nonzero" />
-															</g>
-														</svg> </div>
-													<div class="kt-iconbox__desc">
-														<h3 class="kt-iconbox__title">
-															Чаты с дизайнерами
-														</h3>
-														<div class="kt-iconbox__content">
-															Общайтесь с дизайнерами напрямую
-														</div>
-													</div>
-												</a>
-											</div>
+			
+							<!-- begin:: Footer -->
+				<div class="kt-footer  kt-footer--extended  kt-grid__item" id="kt_footer">
+					<div class="kt-footer__top">
+						<div class="kt-container ">
+							<div class="row">
+								<div class="col-lg-4">
+									<div class="kt-footer__section">
+										<h3 class="kt-footer__title">Что может Дизайн24?</h3>
+										<div class="kt-footer__content">
+											Сравнивайте предложения от дизайнеров интерьера, контролируйте ход проекта в личном
+								кабинете, ведите несколько объектов. Оплата по факту сдачи проекта.
 										</div>
 									</div>
 								</div>
-							</div>
-
-							<!-- end:: iconbox -->
-
-							tables here
-
-							<!-- end:: Content -->
-						</div>
-					</div>
-
-					<!-- begin:: Footer -->
-					<div class="kt-footer  kt-footer--extended  kt-grid__item" id="kt_footer">
-						<div class="kt-footer__top">
-							<div class="kt-container ">
-								<div class="row">
-									<div class="col-lg-4">
-										<div class="kt-footer__section">
-											<h3 class="kt-footer__title">Что может Дизайн24?</h3>
-											<div class="kt-footer__content">
-												Сравнивайте предложения от дизайнеров интерьера, контролируйте ход проекта в личном
-									кабинете, ведите несколько объектов. Оплата по факту сдачи проекта.
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-4">
-										<div class="kt-footer__section">
-											<h3 class="kt-footer__title">Быстрые Ссылки</h3>
-											<div class="kt-footer__content">
-												<div class="kt-footer__nav">
-													<div class="kt-footer__nav-section">
-														<a href="#">Как работает сервис?</a>
-														<a href="#">Решение споров</a>
-														<a href="#">Отзывы клиентов</a>
-													</div>
-													<div class="kt-footer__nav-section">
-														<a href="#">Вы дизайнер интерьера?</a>
-														<a href="#">Дизайнеры сервиса</a>
-														<a href="#">Конфиденциальность</a>
-													</div>
+								<div class="col-lg-4">
+									<div class="kt-footer__section">
+										<h3 class="kt-footer__title">Быстрые Ссылки</h3>
+										<div class="kt-footer__content">
+											<div class="kt-footer__nav">
+												<div class="kt-footer__nav-section">
+													<a href="#">Как работает сервис?</a>
+													<a href="#">Решение споров</a>
+													<a href="#">Отзывы клиентов</a>
+												</div>
+												<div class="kt-footer__nav-section">
+													<a href="#">Вы дизайнер интерьера?</a>
+													<a href="#">Дизайнеры сервиса</a>
+													<a href="#">Конфиденциальность</a>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-lg-4">
-										<div class="kt-footer__section">
-											<h3 class="kt-footer__title">Есть вопрос? Мы свяжемся с Вами!</h3>
-											<div class="kt-footer__content">
-												<form action="" class="kt-footer__subscribe">
-													<div class="input-group">
-														<input type="text" class="form-control" placeholder="Введите вашу почту">
-														<div class="input-group-append">
-															<button class="btn btn-brand" type="button">Свяжитесь со мной!</button>
-														</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="kt-footer__section">
+										<h3 class="kt-footer__title">Есть вопрос? Мы свяжемся с Вами!</h3>
+										<div class="kt-footer__content">
+											<form action="" class="kt-footer__subscribe">
+												<div class="input-group">
+													<input type="text" class="form-control" placeholder="Введите вашу почту">
+													<div class="input-group-append">
+														<button class="btn btn-brand" type="button">Свяжитесь со мной!</button>
 													</div>
-												</form>
-											</div>
+												</div>
+											</form>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-
-					<!-- end:: Footer -->
 				</div>
+
+				<!-- end:: Footer -->
 			</div>
 		</div>
+	</div>
 
 
 		<!-- end:: Page -->
+
 
 
 		<!-- begin::Scrolltop -->
@@ -435,6 +440,7 @@
 		</div>
 
 		<!-- end::Scrolltop -->
+
 		<!-- begin::Global Config(global config for global JS sciprts) -->
 		<script>
 			var KTAppOptions = {
@@ -582,6 +588,11 @@
 		<!--end:: Vendor Plugins for custom pages -->
 
 		<!--end::Global Theme Bundle -->
+
+		<!--begin::Page Scripts(used by this page) -->
+		<script src="assets/js/pages/dashboard.js" type="text/javascript"></script>
+
+		<!--end::Page Scripts -->
 	</body>
 
 	<!-- end::Body -->
